--- a/app/css/style.css
+++ b/app/css/style.css
@@ -16,7 +16,7 @@ ul, ol{
 	padding: 0;
 	list-style: none;
 }
-a{
+a, a:hover{
 	color: inherit;
 	text-decoration: none;
 }
@@ -33,6 +33,9 @@ textarea{
 button{
 	cursor: pointer;
 }
+label{
+	margin-bottom: 0;
+}
 /* RESET END */
 
 /* DEFAULT CLASSES START */
@@ -47,6 +50,27 @@ button{
 }
 .orange-text{
 	color: #ff5912;
+}
+.red-bg{
+	background-color: #e12e3f;
+}
+.black-bg{
+	background-color: #34404b;
+}
+.blue-bg{
+	background-color: #3ab3ff;
+}
+.green-bg{
+	background-color: #2fd967;
+}
+.white-bg{
+	background-color: #fff;
+}
+.light-orange-bg{
+	background-color: #ff9060;
+}
+.orange-bg{
+	background-color: #ff5912;
 }
 /* DEFAULT CLASSES END */
 
@@ -77,9 +101,25 @@ button{
 	padding: 30px 10px;
 	transition: all .3s linear;
 	text-align: center;
+	height: 372px;
+	position: relative;
 }
 .item:hover{
 	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+}
+.item .item-img{
+	transition: all .3s linear;
+	margin-bottom: 30px;
+	height: 216px;
+}
+.item .item-img img{
+	max-height: 100%;
+}
+.item:hover .item-img{
+	height: 90px;
+}
+.item-description{
+	padding: 0 40px;
 }
 .item .item-title{
 	font-size: 18px;
@@ -93,6 +133,103 @@ button{
 	color: #ff5912;
 	font-size: 18px;
 	font-weight: bold;
+}
+.item:hover .item-title{
+	color: #ff5912;
+}
+.item:hover .item-price{
+	display: none;
+}
+.item:hover .more-info-on-hover{
+	opacity: 1;
+}
+.more-info-on-hover{
+	opacity: 0;
+	position: absolute;
+	bottom: 30px;
+	left: 50%;
+	transform: translateX(-50%);
+	transition: all .3s linear;
+	width: 100%;
+	padding: 0 50px;
+}
+.more-info-on-hover .size{
+	font-size: 14px;
+	color: #34404b;
+	margin-bottom: 29px;
+}
+.more-info-on-hover .colors{
+	text-align: center;
+	padding-bottom: 30px;
+	border-bottom:  1px solid #f2f4f7;
+}
+.more-info-on-hover .colors li{
+	display: inline-block;
+	width: 15px;
+	height: 15px;
+	border-radius: 50%;
+}
+.more-info-on-hover .item-controls{
+	padding-top: 30px;
+	text-align: center;
+}
+.more-info-on-hover .item-controls li{
+	display: inline-block;
+}
+.more-info-on-hover .item-controls li+li{
+	margin-left: 30px;
+}
+.item-mini{
+	background-color: #fff;
+	padding: 36px 30px;
+	transition: all .3s linear;
+}
+.item-mini-img{
+	margin-right: 30px;
+}
+.item-mini-description{
+	padding-left: 27px;
+	border-left: 1px solid #f5f5f6;
+	position: relative;
+}
+.item-mini-info{
+	position: absolute;
+}
+.item-mini-title{
+	font-family: 'Harmonia_bold';
+	font-size: 18px;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	margin-bottom: 32px;
+	display: inline-block;
+}
+.item-mini-stars li+li{
+	margin-left: 4px;
+}
+.item-mini-price{
+	font-family: 'Harmonia_bold';
+	font-size: 16px;
+	margin-left: 74px;
+}
+.add-to-cart-hover{
+	opacity: 0;
+	justify-content: center;
+	transition: all .3s linear;
+}
+.add-to-cart-hover span{
+	font-family: 'Harmonia_bold';
+	font-size: 16px;
+	margin-left: 10px;
+}
+.item-mini:hover{
+	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+}
+.item-mini:hover .item-mini-info{
+	display: none;
+}
+.item-mini:hover .add-to-cart-hover{
+	opacity: 1;
 }
 header .top-header{
 	border-bottom: 1px solid #edeff1;
@@ -142,6 +279,50 @@ header .bottom-header .logo{
 	background-color: #ff5912;
 	vertical-align: middle;
 }
+.subscribe-description-title{
+	font-family: 'Harmonia_bold';
+	font-size: 18px;
+	text-transform: uppercase;
+	margin-right: 30px; 
+}
+.subscribe-description-text{
+	font-family: 'Harmonia_italic';
+	font-size: 14px;
+}
+.subscribe-form{
+	padding: 37px 40px;
+}
+.subscribe-input-group label{
+	vertical-align: middle;
+	margin-right: 10px;
+}
+.subscribe-input{
+	color: #7c8791;
+	font-size: 14px;
+	font-family: 'Harmonia_italic';
+	width: 290px;
+}
+.btn{
+	padding: 19px 28px;
+	border: none;
+	border-radius: 0px;
+	font-family: 'Harmonia_semibold';
+	font-size: 14px;
+}
+.btn-default{
+	color: #fff;
+}
+.btn-default:hover,
+.btn-default:focus,
+.btn-default:active:focus{
+	border: none;
+	background-color: #ff9060;
+	color: #fff;
+}
+
+.btn:focus, .btn:active:focus{
+	outline: none;
+}
 footer{
 	background-color: #fff;
 	width: 100%;
@@ -189,6 +370,15 @@ footer{
 	font-weight: 600;
 	margin-bottom: 17px; 
 }
+.carousel-icon{
+	display: inline-block;
+	margin: 0 8px -2px 30px;
+}
+.items-carousel-price{
+	font-size: 18px;
+	line-height: 1.6em;
+	font-weight: 600;
+}
 .user-controls-icon span{
 	display: inline-block;
 	color: #fff;
@@ -211,25 +401,37 @@ footer{
 	margin-bottom: 119px;
 }
 .special-offer-sale{
+	padding: 10px 60px;
 	height: 100px;
 	background-color: #fff;
 }
 .sale-banner{
-	display: inline-block;
-	height: 80px;
-	width: 80px;
+	position: relative;
 	color: #fff;
-	background-color: #ff5912;
 	text-align: center;
-	padding: 22px;
-	margin-left: 62px;
 }
-.sale-banner-content h6{
+.sale-banner > div{
+	display: inline-block;
+	width: 50px;
+	height: 60px;
+}
+.sale-banner div:first-child{
+	transform: rotate(45deg);
+	position: absolute;
+}
+.sale-banner div:last-child{
+	transform: rotate(-45deg);
+	left: 0;
+}
+#sale-banner-content{
+	transform: rotate(45deg) translateX(35%);
+}
+#sale-banner-content h6{
 	font-size: 12px;
 	font-style: italic;
 	margin-bottom: 7px;
 }
-.sale-banner-content span{
+#sale-banner-content span{
 	font-size: 18px;
 	font-weight: 900;
 }
@@ -244,7 +446,10 @@ footer{
 .sale-price{
 	font-size: 32px;
 	font-weight: 900;
-	margin-right: 55px;
+	width: 150px;
+    text-align: right;
+    line-height: 54px;
+    border-left: 1px solid #f5f5f6;
 }
 .sale-price .sale-price-value{
 	font-size: 22px
