--- a/app/css/style.css
+++ b/app/css/style.css
@@ -307,6 +307,7 @@ header .bottom-header .logo{
 	border-radius: 50%;
 	background-color: #ff5912;
 	vertical-align: middle;
+	margin-right: 4px;
 }
 .subscribe-description-title{
 	font-family: 'Harmonia_bold';
@@ -427,7 +428,6 @@ footer{
 	line-height: 60px;
 	text-align: center;
 	background-color: #fff;
-	margin-bottom: 119px;
 }
 .special-offer-sale{
 	padding: 10px 60px;
