--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,7 @@
 /* RESET START */
 *{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 body{
 	margin: 0;
@@ -36,17 +37,31 @@ button{
 label{
 	margin-bottom: 0;
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 /* RESET END */
 
 /* DEFAULT CLASSES START */
 .flex-container{
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 }
-.aling-center{
-	align-items: center;
+.align-center{
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 .justify-sp-between{
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 }
 .orange-text{
 	color: #ff5912;
@@ -102,15 +117,20 @@ label{
 .item{
 	background-color: #fff;
 	padding: 30px 10px;
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 	text-align: center;
 	height: 372px;
 	position: relative;
 }
 .item:hover{
-	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
 }
 .item .item-img{
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 	margin-bottom: 30px;
 	height: 216px;
@@ -130,7 +150,8 @@ label{
 	font-weight: bold;
 	white-space: nowrap;
 	overflow: hidden;
-	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+	   text-overflow: ellipsis;
 }
 .item .item-price{
 	color: #ff5912;
@@ -151,7 +172,11 @@ label{
 	position: absolute;
 	bottom: 30px;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 	width: 100%;
 	padding: 0 50px;
@@ -170,7 +195,8 @@ label{
 	display: inline-block;
 	width: 15px;
 	height: 15px;
-	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	        border-radius: 50%;
 }
 .more-info-on-hover .item-controls{
 	padding-top: 30px;
@@ -185,6 +211,8 @@ label{
 .item-mini{
 	background-color: #fff;
 	padding: 36px 30px;
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 }
 .item-mini-img{
@@ -203,7 +231,8 @@ label{
 	font-size: 18px;
 	white-space: nowrap;
 	overflow: hidden;
-	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+	   text-overflow: ellipsis;
 	margin-bottom: 32px;
 	display: inline-block;
 }
@@ -217,7 +246,12 @@ label{
 }
 .add-to-cart-hover{
 	opacity: 0;
-	justify-content: center;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 }
 .add-to-cart-hover span{
@@ -226,7 +260,8 @@ label{
 	margin-left: 10px;
 }
 .item-mini:hover{
-	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
 }
 .item-mini:hover .item-mini-info{
 	display: none;
@@ -304,7 +339,8 @@ header .bottom-header .logo{
 	display: inline-block;
 	height: 8px;
 	width: 8px;
-	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	        border-radius: 50%;
 	background-color: #ff5912;
 	vertical-align: middle;
 	margin-right: 4px;
@@ -335,7 +371,8 @@ header .bottom-header .logo{
 .btn{
 	padding: 19px 28px;
 	border: none;
-	border-radius: 0px;
+	-webkit-border-radius: 0px;
+	        border-radius: 0px;
 	font-family: 'Harmonia_semibold';
 	font-size: 14px;
 }
@@ -415,7 +452,8 @@ footer{
 	text-align: center;
 	line-height: 18px;
 	width: 18px;
-	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	        border-radius: 50%;
 	background-color: #34404b;
 	position: absolute;
     left: 4px;
@@ -445,15 +483,21 @@ footer{
 	height: 60px;
 }
 .sale-banner div:first-child{
-	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
 	position: absolute;
 }
 .sale-banner div:last-child{
-	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	    -ms-transform: rotate(-45deg);
+	        transform: rotate(-45deg);
 	left: 0;
 }
 #sale-banner-content{
-	transform: rotate(45deg) translateX(35%);
+	-webkit-transform: rotate(45deg) translateX(35%);
+	    -ms-transform: rotate(45deg) translateX(35%);
+	        transform: rotate(45deg) translateX(35%);
 }
 #sale-banner-content h6{
 	font-size: 12px;
@@ -527,5 +571,129 @@ footer{
 }
 .category-list li+li{
 	margin-top: 32px;
+}
+#slider-range{
+	background-color: #edf0f2;
+    height: 3px;
+    border: none;
+    border-radius: none;
+}
+.ui-slider-range{
+	background-color: #34404b;
+}
+#slider-range>.ui-slider-handle{
+	height: 11px;
+	width: 11px;
+	background-color: #34404b;
+	border-radius: 50%;
+}
+.range{
+    margin-top: 65px;
+}
+.min-value, .max-value{
+    position: absolute;
+    bottom: 21px;
+    font-size: 14px;
+    color: #34404b;
+    font-family: 'Harmonia_semibold';
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    left: 50%;
+}
+.add-range-value{
+	margin-top: 30px;
+	font-family: 'Harmonia_semibold';
+	font-size: 14px;
+	line-height: 3.57em;
+}
+#fromValue, #toValue{
+	height: 25px;
+	width: 45px;
+	background-color: #edf0f2;
+	margin-left: 7px;
+}
+.add-range-value .range-input-reoup+.range-input-reoup{
+	margin-left: 23px;
+}
+.product-wrap{
+    padding: 100px 125px;
+    background-color: #fff;
+}
+.product-carousel{
+    width: 330px;
+}
+.product-description h6{
+	margin-bottom: 37px;
+	font-size: 18px;
+	line-height: 1.6em;
+	font-weight: 600;
+}
+.order-form span{
+	font-size: 18px;
+    font-family: 'Harmonia_semibold';
+    margin-right: 40px;
+}
+.size-radio input[type="radio"]{
+    display: none;
+}
+.size-radio label{
+    font-size: 14px;
+    color: #34404b;
+    font-family: 'Harmonia_semibold';
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.size-radio input[type="radio"]:checked + label{
+    color: #ff5912;
+    font-size: 18px;
+}
+.size-radio + .size-radio{
+    margin-left: 20px;
+}
+.order-form{
+    padding: 40px 0;
+    border-top: 1px solid #edeff1;
+    border-bottom: 1px solid #edeff1;
+}
+.custom-number>.jq-number__field {
+    width: 30px;
+    border: 0px;
+    box-shadow: none;
+}
+.custom-number input[type="number"]{
+	padding: 4px 4px;
+    font-family: 'Harmonia_semibold';
+    font-size: 18px;
+    color: #ff5912;
+}
+.custom-number>.jq-number__spin.minus,
+.custom-number>.jq-number__spin.plus{
+	background: none;
+	border: none;
+	box-shadow: none;
+}
+.order-now{
+	margin-top: 40px;
+}
+.btn.btn-default.btn-radius{
+	background-color: #ff5912;
+	border-radius: 23px;
+	font-size: 18px;
+	margin-left: 26px;
+}
+.order-now .product-price{
+	font-family: 'Harmonia_black';
+	font-size: 20px;
+	margin-right: auto;
+}
+.order-now .product-share{
+	text-align: center;
+}
+.order-now .product-share li{
+	display: inline-block;
+}
+.order-now .product-share li+li{
+	margin-left: 25px;
 }
 /* ALL STYLES END */
