--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 /* RESET START */
 *{
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 body{
 	margin: 0;
@@ -36,17 +37,34 @@ button{
 label{
 	margin-bottom: 0;
 }
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
 /* RESET END */
 
 /* DEFAULT CLASSES START */
 .flex-container{
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
 }
-.aling-center{
-	align-items: center;
+.align-center{
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 .justify-sp-between{
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+}
+.flex-wrap{
+	flex-wrap: wrap;
 }
 .orange-text{
 	color: #ff5912;
@@ -99,18 +117,31 @@ label{
 .default-section{
 	padding: 60px 0;
 }
+@media(max-width: 767px){
+	.default-section{
+		padding: 30px 0;
+	}
+	.subtitle{
+		font-size: 14px;
+	}
+}
 .item{
 	background-color: #fff;
 	padding: 30px 10px;
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 	text-align: center;
 	height: 372px;
 	position: relative;
 }
 .item:hover{
-	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
 }
 .item .item-img{
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 	margin-bottom: 30px;
 	height: 216px;
@@ -130,7 +161,8 @@ label{
 	font-weight: bold;
 	white-space: nowrap;
 	overflow: hidden;
-	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+	   text-overflow: ellipsis;
 }
 .item .item-price{
 	color: #ff5912;
@@ -151,7 +183,11 @@ label{
 	position: absolute;
 	bottom: 30px;
 	left: 50%;
-	transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	    -ms-transform: translateX(-50%);
+	        transform: translateX(-50%);
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 	width: 100%;
 	padding: 0 50px;
@@ -170,7 +206,8 @@ label{
 	display: inline-block;
 	width: 15px;
 	height: 15px;
-	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	        border-radius: 50%;
 }
 .more-info-on-hover .item-controls{
 	padding-top: 30px;
@@ -182,15 +219,28 @@ label{
 .more-info-on-hover .item-controls li+li{
 	margin-left: 30px;
 }
+@media(max-width: 1199px){
+	.item-description{
+		padding: 0;
+	}
+	.more-info-on-hover{
+		padding: 0 25px;
+	}
+}
+@media(max-width: 991px){
+	.item{
+		margin-bottom: 30px;
+	}
+}
 .item-mini{
 	background-color: #fff;
 	padding: 36px 30px;
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 }
-.item-mini-img{
-	margin-right: 30px;
-}
 .item-mini-description{
+	margin-left: 30px;
 	padding-left: 27px;
 	border-left: 1px solid #f5f5f6;
 	position: relative;
@@ -203,7 +253,8 @@ label{
 	font-size: 18px;
 	white-space: nowrap;
 	overflow: hidden;
-	text-overflow: ellipsis;
+	-o-text-overflow: ellipsis;
+	   text-overflow: ellipsis;
 	margin-bottom: 32px;
 	display: inline-block;
 }
@@ -217,7 +268,12 @@ label{
 }
 .add-to-cart-hover{
 	opacity: 0;
-	justify-content: center;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-transition: all .3s linear;
+	-o-transition: all .3s linear;
 	transition: all .3s linear;
 }
 .add-to-cart-hover span{
@@ -226,13 +282,41 @@ label{
 	margin-left: 10px;
 }
 .item-mini:hover{
-	box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.1);
 }
 .item-mini:hover .item-mini-info{
 	display: none;
 }
 .item-mini:hover .add-to-cart-hover{
 	opacity: 1;
+}
+@media(max-width: 1199px){
+	.item-mini{
+		padding: 15px;
+	}
+	.item-mini-description{
+		margin-left: 10px;
+		padding-left: 10px;
+	}
+}
+@media(max-width: 767px){
+	.item-mini{
+		margin-bottom: 30px;
+	}
+	.item-mini>.flex-container{
+		justify-content: center;
+	}
+}
+@media(max-width: 353px){
+	.item-mini{
+		padding: 8px;
+		margin-bottom: 15px;
+	}
+	.item-mini-title{
+		line-height: 2em;
+		margin-bottom: 5px;
+	}
 }
 .checkbox-group{
 	margin-bottom: 32px;
@@ -273,9 +357,23 @@ header .top-header .phone-list li span.custom-icon{
 header .top-header .social-nav a+a{
 	margin-left: 20px;
 }
+.phone-list{
+	margin-right: 20px;
+}
+@media(max-width: 427px){
+	.phone-list{
+		margin-bottom: 20px;
+		width: 100%;
+		justify-content: center;
+	}
+	.social-nav{
+		width: 100%;
+		text-align: center;
+	}
+}
 .items-carousel{
 	min-height: 650px;
-	background: url(../img/carousel-img-1.png) no-repeat center / cover;
+	background: url(../img/carousel-img-1.jpg) no-repeat center / cover;
 }
 header .bottom-header{
 	padding: 42px 0;
@@ -300,11 +398,32 @@ header .bottom-header .logo{
 .bottom-header .user-controls a+a{
 	margin-left: 30px;
 }
+@media(max-width: 991px){
+	.header-nav{
+		display: none;
+	}
+	.slicknav_menu{
+		display: block;
+	}
+	.bottom-header .user-controls{
+		margin: 0 20px;
+	}
+	header .bottom-header .logo{
+		margin: 0 0 20px 0;
+	}
+}
+@media(max-width: 324px){
+	header .bottom-header .logo{
+		width: 100%;
+		text-align: center;
+	}
+}
 .circle{
 	display: inline-block;
 	height: 8px;
 	width: 8px;
-	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	        border-radius: 50%;
 	background-color: #ff5912;
 	vertical-align: middle;
 	margin-right: 4px;
@@ -335,7 +454,8 @@ header .bottom-header .logo{
 .btn{
 	padding: 19px 28px;
 	border: none;
-	border-radius: 0px;
+	-webkit-border-radius: 0px;
+	        border-radius: 0px;
 	font-family: 'Harmonia_semibold';
 	font-size: 14px;
 }
@@ -353,10 +473,48 @@ header .bottom-header .logo{
 .btn:focus, .btn:active:focus{
 	outline: none;
 }
+@media(max-width: 991px){
+	.subscribe-form{
+		justify-content: center;
+	}
+	.subscribe-description{
+		margin-bottom: 30px;
+	}
+}
+@media(max-width: 542px){
+	.subscribe-form form{
+		justify-content: center;
+	}
+	.subscribe-input-group{
+		margin-bottom: 15px;
+		width: 100%;
+	}
+	.subscribe-input-group .subscribe-input{
+		width: auto;
+	}
+}
+@media(max-width: 535px){
+	.subscribe-description{
+		text-align: center;
+	}
+	.subscribe-description-title{
+		display: block;
+		margin-bottom: 10px;
+	}
+}
+@media(max-width: 392px){
+	.subscribe-form{
+		padding: 20px;
+	}
+}
+@media(max-width: 352px){
+	.subscribe-description-text{
+		font-size: 12px;
+	}
+}
 footer{
 	background-color: #fff;
 	width: 100%;
-	height: 245px;
 	padding: 84px 0;
 }
 .footer-logo span{
@@ -369,6 +527,7 @@ footer{
 	font-size: 14px;
 	line-height: 2.14em;
 	list-style: disc;
+	padding-left: 25px;
 }
 .footer-col li:hover,
 .footer-col a:hover{
@@ -386,13 +545,39 @@ footer{
 	margin-bottom: 12px;
 	display: inline-block;
 }
+.payment-methods .cards-icons li{
+	display: inline-block;
+}
 .payment-methods .cards-icons li+li{
 	margin-left: 10px;
+}
+@media(max-width: 991px){
+	footer{
+		padding: 50px 0;
+	}
+	.payment-methods{
+		width: 100%;
+		text-align: center;
+		margin-top: 10px;
+	}
+}
+@media(max-width: 606px){
+	.footer-logo{
+		width: 100%;
+		text-align: center;
+		margin-bottom: 10px;
+	}
 }
 /* DEFAULT COMPONENT END */
 /* ALL STYLES START */
 .user-controls-icon{
 	position: relative;
+}
+.item-flexslider{
+	position: relative;
+}
+.items-carousel-description{
+	padding-left: calc(8.3333% + 30px);
 }
 .items-carousel-description h6{
 	font-size: 18px;
@@ -415,7 +600,8 @@ footer{
 	text-align: center;
 	line-height: 18px;
 	width: 18px;
-	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	        border-radius: 50%;
 	background-color: #34404b;
 	position: absolute;
     left: 4px;
@@ -424,6 +610,11 @@ footer{
 .new-item{
 	margin-bottom: 80px;
 }
+@media(max-width: 991px){
+	.new-item{
+    	margin-bottom: 15px;
+	}
+}
 .load-more{
 	line-height: 60px;
 	text-align: center;
@@ -431,10 +622,10 @@ footer{
 }
 .special-offer-sale{
 	padding: 10px 60px;
-	height: 100px;
 	background-color: #fff;
 }
 .sale-banner{
+	padding: 9px 15px;
 	position: relative;
 	color: #fff;
 	text-align: center;
@@ -445,15 +636,21 @@ footer{
 	height: 60px;
 }
 .sale-banner div:first-child{
-	transform: rotate(45deg);
+	-webkit-transform: rotate(45deg);
+	    -ms-transform: rotate(45deg);
+	        transform: rotate(45deg);
 	position: absolute;
 }
 .sale-banner div:last-child{
-	transform: rotate(-45deg);
+	-webkit-transform: rotate(-45deg);
+	    -ms-transform: rotate(-45deg);
+	        transform: rotate(-45deg);
 	left: 0;
 }
 #sale-banner-content{
-	transform: rotate(45deg) translateX(35%);
+	-webkit-transform: rotate(45deg) translateX(35%);
+	    -ms-transform: rotate(45deg) translateX(35%);
+	        transform: rotate(45deg) translateX(35%);
 }
 #sale-banner-content h6{
 	font-size: 12px;
@@ -479,6 +676,7 @@ footer{
     text-align: right;
     line-height: 54px;
     border-left: 1px solid #f5f5f6;
+    margin-left: 10px;
 }
 .sale-price .sale-price-value{
 	font-size: 22px
@@ -488,7 +686,6 @@ footer{
 	margin-right: 10px;
 }
 .special-offer-area{
-	height: 100px;
 	background-color: #fff;
 	padding: 27px 0;
 }
@@ -502,8 +699,44 @@ footer{
 	color: rgba(52, 64, 75, .4);
 	letter-spacing: .6em;
 }
+@media(min-width: 992px) and (max-width: 1200px){
+	.special-offer-sale{
+		padding: 10px 25px;
+	}
+}
+@media(max-width: 991px){
+	.special-offer-sale{
+		margin-bottom: 30px;
+	}
+}
+@media(max-width: 628px){
+	.sale-price{
+		border-top: 1px solid #f5f5f6;
+		border-left: none;
+		margin-top: 10px;
+		width: 100%;
+		text-align: center;
+	}
+}
+@media(max-width: 468px){
+	.sale-banner{
+		width: 100%;
+	}
+	.sale-description{
+		width: 100%;
+		text-align: center;
+	}
+	.special-offer-sale{
+		padding: 10px 25px;
+	}
+}
 .category-wrap{
 	padding-top: 120px;
+}
+@media(max-width: 767px){
+	.category-wrap{
+		padding-top: 60px;
+	}
 }
 .aside-section{
 	padding: 40px;
@@ -527,5 +760,134 @@ footer{
 }
 .category-list li+li{
 	margin-top: 32px;
+}
+#slider-range{
+	background-color: #edf0f2;
+    height: 3px;
+    border: none;
+    border-radius: none;
+}
+.ui-slider-range{
+	background-color: #34404b;
+}
+#slider-range>.ui-slider-handle{
+	height: 11px;
+	width: 11px;
+	background-color: #34404b;
+	border-radius: 50%;
+}
+.range{
+    margin-top: 65px;
+}
+.min-value, .max-value{
+    position: absolute;
+    bottom: 21px;
+    font-size: 14px;
+    color: #34404b;
+    font-family: 'Harmonia_semibold';
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+    left: 50%;
+}
+.add-range-value{
+	margin-top: 30px;
+	font-family: 'Harmonia_semibold';
+	font-size: 14px;
+	line-height: 3.57em;
+}
+#fromValue, #toValue{
+	height: 25px;
+	width: 45px;
+	background-color: #edf0f2;
+	margin-left: 7px;
+}
+.add-range-value .range-input-reoup+.range-input-reoup{
+	margin-left: 23px;
+}
+@media(max-width: 991px){
+	.sidebar{
+		margin-bottom: 30px;
+	}
+}
+.product-wrap{
+    padding: 100px 125px;
+    background-color: #fff;
+}
+.product-carousel{
+    width: 330px;
+}
+.product-description h6{
+	margin-bottom: 37px;
+	font-size: 18px;
+	line-height: 1.6em;
+	font-weight: 600;
+}
+.order-form span{
+	font-size: 18px;
+    font-family: 'Harmonia_semibold';
+    margin-right: 40px;
+}
+.size-radio input[type="radio"]{
+    display: none;
+}
+.size-radio label{
+    font-size: 14px;
+    color: #34404b;
+    font-family: 'Harmonia_semibold';
+    text-transform: uppercase;
+    cursor: pointer;
+}
+.size-radio input[type="radio"]:checked + label{
+    color: #ff5912;
+    font-size: 18px;
+}
+.size-radio + .size-radio{
+    margin-left: 20px;
+}
+.order-form{
+    padding: 40px 0;
+    border-top: 1px solid #edeff1;
+    border-bottom: 1px solid #edeff1;
+}
+.custom-number>.jq-number__field {
+    width: 30px;
+    border: 0px;
+    box-shadow: none;
+}
+.custom-number input[type="number"]{
+	padding: 4px 4px;
+    font-family: 'Harmonia_semibold';
+    font-size: 18px;
+    color: #ff5912;
+}
+.custom-number>.jq-number__spin.minus,
+.custom-number>.jq-number__spin.plus{
+	background: none;
+	border: none;
+	box-shadow: none;
+}
+.order-now{
+	margin-top: 40px;
+}
+.btn.btn-default.btn-radius{
+	background-color: #ff5912;
+	border-radius: 23px;
+	font-size: 18px;
+	margin-left: 26px;
+}
+.order-now .product-price{
+	font-family: 'Harmonia_black';
+	font-size: 20px;
+	margin-right: auto;
+}
+.order-now .product-share{
+	text-align: center;
+}
+.order-now .product-share li{
+	display: inline-block;
+}
+.order-now .product-share li+li{
+	margin-left: 25px;
 }
 /* ALL STYLES END */
