--- a/app/css/slicknav.css
+++ b/app/css/slicknav.css
@@ -1,4 +1,4 @@
-/*!
+ /*!
  * SlickNav Responsive Mobile Menu v1.0.10
  * (c) 2016 Josh Cope
  * licensed under MIT
@@ -79,8 +79,8 @@
   font-size: 16px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background: #4c4c4c;
-  padding: 5px; }
+  background: #fff;
+}
   .slicknav_menu * {
     -webkit-box-sizing: border-box;
             box-sizing: border-box; }
@@ -92,20 +92,29 @@
     background-color: #fff; }
 
 .slicknav_btn {
-  margin: 5px 5px 6px;
   text-decoration: none;
   text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
   -webkit-border-radius: 4px;
   border-radius: 4px;
-  background-color: #222; }
+  background-color: #ff5912; }
 
 .slicknav_nav {
-  color: #fff;
+  color: #34404b;
   margin: 0;
-  padding: 0;
-  font-size: 0.875em;
+  padding: 10px 0;
+  font-size: 16px;
+  font-family: 'Harmonia_regular';
   list-style: none;
-  overflow: hidden; }
+  overflow: hidden;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  z-index: 999;
+  text-align: right;
+  box-shadow: 0px 5px 12px rgba(0, 0, 0, .1)
+   }
   .slicknav_nav ul {
     list-style: none;
     overflow: hidden;
@@ -120,15 +129,11 @@
       background: #ccc;
       color: #fff; }
   .slicknav_nav a {
-    padding: 5px 10px;
-    margin: 2px 5px;
+    padding: 10px 15px;
     text-decoration: none;
-    color: #fff; }
+    color: #34404b; }
     .slicknav_nav a:hover {
-      -webkit-border-radius: 6px;
-      border-radius: 6px;
-      background: #ccc;
-      color: #222; }
+      color: #ff5912; }
   .slicknav_nav .slicknav_txtnode {
     margin-left: 15px; }
   .slicknav_nav .slicknav_item a {
