--- a/app/css/style.css
+++ b/app/css/style.css
@@ -383,6 +383,9 @@ header .top-header .social-nav a+a{
 	min-height: 650px;
 	background: url(../img/carousel-img-1.jpg) no-repeat center / cover;
 }
+header{
+	position: relative;
+}
 header .bottom-header{
 	padding: 42px 0;
 }
@@ -407,6 +410,9 @@ header .bottom-header .logo{
 	margin-left: 30px;
 }
 @media(max-width: 991px){
+	header .bottom-header{
+		padding: 20px 0;
+	}
 	.header-nav{
 		display: none;
 	}
@@ -417,13 +423,25 @@ header .bottom-header .logo{
 		margin: 0 20px;
 	}
 	header .bottom-header .logo{
-		margin: 0 0 20px 0;
+		margin: 0;
+	}
+}
+@media(max-width: 362px){
+	.slicknav_menu{
+		width: 100%;
+		text-align: right;
+		margin-top: 10px;
 	}
 }
 @media(max-width: 324px){
 	header .bottom-header .logo{
 		width: 100%;
 		text-align: center;
+		margin: 0 0 30px 0;
+	}
+	.slicknav_menu{
+		width: auto;
+		margin: 0;
 	}
 }
 .circle{
