адаптив страниц category и product, исправлена карусель на главной странице

--- a/app/css/flexslider.css
+++ b/app/css/flexslider.css
@@ -245,7 +245,8 @@ html[xmlns] .flexslider .slides {
   background-color: #f4f6f8;
 }
 
-.flex-control-thumbs li:hover{
+.flex-control-thumbs li:hover,
+.flex-control-thumbs li:active{
   background-color: #ff5912;
 }
 
@@ -267,42 +268,11 @@ html[xmlns] .flexslider .slides {
   opacity: 1;
   cursor: default;
 }
-.item-flexslider .flex-direction-nav{
+.flexslider:hover .flex-direction-nav .flex-prev,
+.flex-direction-nav .flex-prev,
+.flexslider:hover .flex-direction-nav .flex-next,
+.flex-direction-nav .flex-next{
   display: none;
-}
-.item-flexslider .flex-control-nav {
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
-}
-.item-flexslider .flex-control-paging li{
-  margin: 0;
-  display: block;
-}
-.item-flexslider .flex-control-paging li+li{
-  margin-top: 10px;
-}
-.item-flexslider .flex-control-paging li a{
-  width: 10px;
-  height: 16px;
-  background-color: #fff;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-  -webkit-border-radius: 0px;
-          border-radius: 0px;
-  -webkit-transition: all .3s linear;
-  -o-transition: all .3s linear;
-  transition: all .3s linear;
-}
-.item-flexslider .flex-control-paging li a:hover{
-  background-color: #ff5912;
-}
- .item-flexslider .flex-control-paging li a.flex-active{
-  background-color: #ff5912;
-  height: 36px;
 }
 /* ====================================================================================================================
  * RESPONSIVE
